@@ -2,6 +2,9 @@ dh-python (5.20211022) UNRELEASED; urgency=medium
 
   * pybuild: Avoid calling deprecated "setup.py test", instead use unittest
     discover. (closes: #982298)
+  * pybuild distutils plugin: Use underscore separated keys in
+    pydistutils.cfg, following setuptools 54.1's deprecation of
+    dash-separation.
 
  -- Stefano Rivera <stefanor@debian.org>  Thu, 21 Oct 2021 20:18:48 -0700
 
